--- a/styles/components/_hotelInfo-room.scss
+++ b/styles/components/_hotelInfo-room.scss
@@ -2,15 +2,30 @@
 .hotelInfoRoomContainer{
     display: flex;
     flex-direction: row; 
-    
+    width: 100%;
     * {
         font-size: $base-font-size;
     }
+    // @include sm {
+    //     .searchcontainer {
+    //         width: 500px;
+    //     }
+    // }
+    // @include md {
+    //     .searchcontainer {
+    //         width: 500px;
+    //     }
+    // }
+    // @include lg {
+    //     .searchcontainer {
+    //         width: 700px;
+    //     }
+    // }
     .searchcontainer{
         
         background:white;
         height: 200px;
-        width: 700px;
+        width: 88%;
         border-radius: $base-border-radius;
         
         display: flex;
@@ -62,7 +77,7 @@
         border-radius: $base-border-radius;
         margin: $base-margin;
         height: 200px;
-        width: 100px;
+        width: 12%;
     }
 
     // @include sm{
