--- a/styles/components/_hotelinfo-section.scss
+++ b/styles/components/_hotelinfo-section.scss
@@ -1,18 +1,47 @@
 .hotelinfoSectionContainer {
     display: flex;
     flex-direction: column;
-    width: 70%;
     margin: auto;
-    background-color: burlywood;
-
-    .roominfo, .hotelInfoEvaluate, .hotelInfoInformation, .hotelInfoAttraction
+    @include sm {
+        background-color: burlywood;
+        width: 100%;
+    }
+    @include md {
+        background-color: beige;
+        width: 85%;
+    }
+    @include lg {
+        background-color: aquamarine;
+        width: 80%;
+    }
+    @include xl {
+        background-color: aqua;
+        width: 70%;
+    }
+    .hotelInfoEvaluate, .hotelInfoInformation,
+    .hotelInfoAttraction, .hotelInfoTransportation {
+        margin: $base-margin;
+    }
+    .roominfo, .hotelInfoEvaluate, .hotelInfoInformation, 
+    .hotelInfoAttraction, .hotelInfoTransportation
     {
         margin-top: 3%;
-        margin-bottom: 3%;
+        margin-bottom: 5%;
     }
 }
 
 .roominfo {
-    display: flex;
-    
+    display: grid;
+    grid-template-columns: 7fr 1fr;
+    .right {
+        grid-column-start: 2;
+        grid-column-end:3;
+        // grid-row-end: -1;
+        background-color: red;
+    }
+    .left {
+        grid-column-start: 1;
+        grid-column-end: 2;
+        background-color: green;
+    }
 }
