--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -23,6 +23,7 @@
 @import '../components/hotelInfo-information';
 @import '../components/hotelInfo-transportation';
 @import '../components/hotelInfo-book';
+@import '../components/hotelinfo-title';
 @import '../components/hotelinfo-section';
 
 @import '../components/search-filter';
