--- a/styles/components/_hotelInfo-book.scss
+++ b/styles/components/_hotelInfo-book.scss
@@ -1,12 +1,22 @@
 
 .hotelInfoBookContainer{
-    padding: $base-margin;
+    @include sm{
+        padding: $base-margin * 0.5;
+        .right_container{//右邊那個立即訂房
+            background:white;
+            border-radius: $base-border-radius;
+            height: 60px;
+            width: 100%;
+        }
+    }
+    @include md {
+        padding: $base-margin;
+    }
     @include lg{
-        background-color: red;
         .right_container{//右邊那個立即訂房
             // position: relative;
             background:white;
-            border-radius: 10px;
+            border-radius: $base-border-radius;
             height: 100%;
             width: 100%;
         }
@@ -25,18 +35,7 @@
     //     }
     // }
 
-    // @include md{
-    //     background-color: blue;
-    //     .right_container{//右邊那個立即訂房
-    //         position: relative;
-    //         background:white;
-    //         border-radius: 10px;
-    //         height:820px;
-    //         width: 80px;
-    //         left: 15px;
-    //         margin-top: 17.5px;
-    //     }
-    // }
+    
 
     
 
