--- a/styles/components/_hotelInfo-room.scss
+++ b/styles/components/_hotelInfo-room.scss
@@ -6,21 +6,14 @@
     * {
         font-size: $base-font-size;
     }
-    // @include sm {
-    //     .searchcontainer {
-    //         width: 500px;
-    //     }
-    // }
-    // @include md {
-    //     .searchcontainer {
-    //         width: 500px;
-    //     }
-    // }
-    // @include lg {
-    //     .searchcontainer {
-    //         width: 700px;
-    //     }
-    // }
+    .searchcontainer, .button_container{
+        @include sm {
+            margin: $base-margin * 0.5;
+        }
+        @include md {
+            margin: $base-margin;
+        }
+    }
     .searchcontainer{
         
         background:white;
@@ -32,8 +25,8 @@
         flex-direction: column;
         justify-content: space-between;
 
-        margin: $base-margin;
         padding: $base-padding * 1.5;
+
         .container{
             display: flex;
             flex-direction: row;
@@ -75,7 +68,6 @@
     .button_container{
         background:white;
         border-radius: $base-border-radius;
-        margin: $base-margin;
         height: 200px;
         width: 12%;
     }
