--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -521,6 +521,16 @@
 .hotelInfoRoomContainer * {
   font-size: 1rem;
 }
+@media (min-width: 480px) {
+  .hotelInfoRoomContainer .searchcontainer, .hotelInfoRoomContainer .button_container {
+    margin: 0.5rem;
+  }
+}
+@media (min-width: 720px) {
+  .hotelInfoRoomContainer .searchcontainer, .hotelInfoRoomContainer .button_container {
+    margin: 1rem;
+  }
+}
 .hotelInfoRoomContainer .searchcontainer {
   background: white;
   height: 200px;
@@ -529,7 +539,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 1rem;
   padding: 1.125rem;
 }
 .hotelInfoRoomContainer .searchcontainer .container {
@@ -566,7 +575,6 @@
 .hotelInfoRoomContainer .button_container {
   background: white;
   border-radius: 20px;
-  margin: 1rem;
   height: 200px;
   width: 12%;
 }
@@ -734,16 +742,26 @@
   position: relative;
 }
 
-.hotelInfoBookContainer {
-  padding: 1rem;
-}
-@media (min-width: 960px) {
+@media (min-width: 480px) {
   .hotelInfoBookContainer {
-    background-color: red;
+    padding: 0.5rem;
   }
   .hotelInfoBookContainer .right_container {
     background: white;
-    border-radius: 10px;
+    border-radius: 20px;
+    height: 60px;
+    width: 100%;
+  }
+}
+@media (min-width: 720px) {
+  .hotelInfoBookContainer {
+    padding: 1rem;
+  }
+}
+@media (min-width: 960px) {
+  .hotelInfoBookContainer .right_container {
+    background: white;
+    border-radius: 20px;
     height: 100%;
     width: 100%;
   }
@@ -926,17 +944,28 @@
 
 .roominfo {
   display: grid;
-  grid-template-columns: 7fr 1fr;
 }
-.roominfo .right {
-  grid-column-start: 2;
-  grid-column-end: 3;
-  background-color: red;
+@media (min-width: 480px) {
+  .roominfo {
+    grid-template-columns: 1fr;
+  }
+  .roominfo .right, .roominfo .left {
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
 }
-.roominfo .left {
-  grid-column-start: 1;
-  grid-column-end: 2;
-  background-color: green;
+@media (min-width: 960px) {
+  .roominfo {
+    grid-template-columns: 7fr 1fr;
+  }
+  .roominfo .right {
+    grid-column-start: 2;
+    grid-column-end: 3;
+  }
+  .roominfo .left {
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
 }
 
 .containerhidden {
