--- a/styles/components/_hotelInfo-attraction.scss
+++ b/styles/components/_hotelInfo-attraction.scss
@@ -1,47 +1,56 @@
 .hotelInfoAttraction{
 
     .attraction{
-        padding-top: 2%;
-        display: flex;
-        flex-direction: row;
+        display: grid;
+        @include sm {
+          grid-template-columns: 1fr 1fr;
+        }
+        @include lg {
+          grid-template-columns: 2fr 2fr 2fr 1.5fr;
+        }
+
         width: 100%;
         height: 50%;
-      }
 
-      .attractionDetailB{
-        width: 28.57%;
-      }
+        .attractionDetail {
+          margin-top: $base-margin;
+          margin-bottom: $base-margin;
+          margin-right: $base-margin;
+          padding: $base-padding;
 
-      .attractionDetailS{
-        width: 14.285%;
-      }
 
-      .title {
-        margin-bottom: 1%;
-        font-size: $font-size-xl;
-        font-weight: bolder;
-        position: relative;
-      }
+          .title {
+            font-size: $font-size-xl;
+            font-weight: bolder;
+          }
+    
+          .name {
+            width: 100%;
+            font-size: $base-font-size;
+            margin-top: $base-margin;
+            margin-bottom: $base-margin;
+            margin-right: $base-margin;
+          }
+          .subtitle {
+            font-size: $font-size-md;
+            font-weight: bold;
+            margin-bottom: $base-margin;
+          }
+          .containerB {
+            display: grid;
+            // grid-template-rows: repeat(3, 50px);
+            grid-template-columns: 50% 50%;
+          }
+    
+          .containerS {
+            display: grid;
+            // grid-template-rows: repeat(3, 50px);
+            grid-template-columns: 100%;
+          }
+        }
+        
+  
+    }
 
-      .name {
-        font-size: $base-font-size;
-        position: relative;
-      }
-
-      .containerB {
-        display: grid;
-        grid-template-rows: repeat(3, 50px);
-        grid-template-columns: 50% 50%;
-        margin-top: 10px;
-        margin-left: 10px;
-      }
-
-      .containerS {
-        display: grid;
-        grid-template-rows: repeat(3, 50px);
-        grid-template-columns: 100%;
-        margin-top: 10px;
-        margin-left: 10px;
-      }
-
+      
   }
