--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -580,59 +580,64 @@
 }
 
 .hotelInfoAttraction .attraction {
-  padding-top: 2%;
-  display: flex;
-  flex-direction: row;
+  display: grid;
   width: 100%;
   height: 50%;
 }
-.hotelInfoAttraction .attractionDetailB {
-  width: 28.57%;
+@media (min-width: 480px) {
+  .hotelInfoAttraction .attraction {
+    grid-template-columns: 1fr 1fr;
+  }
 }
-.hotelInfoAttraction .attractionDetailS {
-  width: 14.285%;
+@media (min-width: 960px) {
+  .hotelInfoAttraction .attraction {
+    grid-template-columns: 2fr 2fr 2fr 1.5fr;
+  }
 }
-.hotelInfoAttraction .title {
-  margin-bottom: 1%;
+.hotelInfoAttraction .attraction .attractionDetail {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  margin-right: 1rem;
+  padding: 0.75rem;
+}
+.hotelInfoAttraction .attraction .attractionDetail .title {
   font-size: 2rem;
   font-weight: bolder;
-  position: relative;
 }
-.hotelInfoAttraction .name {
+.hotelInfoAttraction .attraction .attractionDetail .name {
+  width: 100%;
   font-size: 1rem;
-  position: relative;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  margin-right: 1rem;
 }
-.hotelInfoAttraction .containerB {
+.hotelInfoAttraction .attraction .attractionDetail .subtitle {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+.hotelInfoAttraction .attraction .attractionDetail .containerB {
   display: grid;
-  grid-template-rows: repeat(3, 50px);
   grid-template-columns: 50% 50%;
-  margin-top: 10px;
-  margin-left: 10px;
 }
-.hotelInfoAttraction .containerS {
+.hotelInfoAttraction .attraction .attractionDetail .containerS {
   display: grid;
-  grid-template-rows: repeat(3, 50px);
   grid-template-columns: 100%;
-  margin-top: 10px;
-  margin-left: 10px;
 }
 
 .hotelInfoEvaluate {
   width: 100%;
 }
-.hotelInfoEvaluate .name {
+.hotelInfoEvaluate * {
   font-size: 1rem;
-  position: relative;
-  word-wrap: break-word;
 }
 .hotelInfoEvaluate .evaluate_gradenumber {
   font-size: 1rem;
   font-weight: bold;
-  font-size: 500%;
+  font-size: 6rem;
 }
-.hotelInfoEvaluate .evaluate_grade {
-  font-size: 1rem;
-  font-size: 100%;
+.hotelInfoEvaluate .title {
+  font-size: 2rem;
 }
 .hotelInfoEvaluate .inline {
   width: 100%;
@@ -641,49 +646,59 @@
 .hotelInfoEvaluate .container {
   display: grid;
   grid-template-rows: 220px;
-  grid-template-columns: repeat(3, 300px);
+  grid-auto-columns: minmax(100px, auto);
   grid-column-gap: 2%;
   margin-top: 2%;
 }
 .hotelInfoEvaluate .evaluatecontainer {
-  position: relative;
+  grid-row: 1/-1;
   display: inline-block;
-  padding-top: 7%;
-  padding-left: 7%;
-  padding-right: 7%;
+  padding: 0.75rem;
   background: white;
   border-radius: 10px;
   height: 200px;
-  width: 300px;
+  width: 280px;
   left: 0px;
 }
-.hotelInfoEvaluate .evaluatecontainergray {
-  position: relative;
+.hotelInfoEvaluate .evaluatecontainer * {
+  margin: 0.8rem;
+}
+.hotelInfoEvaluate .evaluatecontainer .name {
+  word-wrap: break-word;
+}
+.hotelInfoEvaluate .evaluatecontainer .evaluatecontainergray {
   display: flex;
   align-items: center;
-  margin-top: 5%;
-  margin-bottom: 5%;
-  margin-left: 2%;
   padding: 2%;
   background: rgb(180, 180, 180);
   border-radius: 10px;
-  height: 22px;
+  height: 30px;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
   left: 0px;
 }
-.hotelInfoEvaluate .circle {
+.hotelInfoEvaluate .evaluatecontainer .circle {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  margin-right: 20px;
+  background-color: aquamarine;
+  margin-left: 0;
 }
-.hotelInfoEvaluate .imgname {
+.hotelInfoEvaluate .evaluatecontainer .imgname {
   height: 50px;
   width: 100%;
   display: flex;
   align-items: center;
+}
+.hotelInfoEvaluate .addcomment {
+  grid-row: 1/-1;
+  background: none;
+  width: 35%;
+  height: 100%;
+}
+.hotelInfoEvaluate .addcomment * {
+  font-size: 3rem;
 }
 
 .hotelInfoInformation {
@@ -692,37 +707,34 @@
 .hotelInfoInformation .title {
   font-size: 2rem;
   font-weight: bolder;
-  position: relative;
 }
 .hotelInfoInformation .searchcontainer {
-  position: relative;
   display: flex;
   flex-direction: column;
-  margin-top: 5%;
-  padding-top: 5%;
-  padding-left: 8%;
-  padding-right: 8%;
+  justify-content: space-between;
+  margin-top: 2rem;
+  padding: 2.25rem;
   background: white;
-  border-radius: 10px;
+  border-radius: 20px;
   height: 600px;
   width: 95%;
-  left: 0px;
 }
 .hotelInfoInformation .searchcontainerALL {
   width: 100%;
-  height: 15%;
   display: flex;
   flex-direction: row;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
-.hotelInfoInformation .searchcontainerTitle {
+.hotelInfoInformation .searchcontainerALL .searchcontainerTitle {
   width: 30%;
   height: 100%;
 }
-.hotelInfoInformation .searchcontainerName {
+.hotelInfoInformation .searchcontainerALL .searchcontainerName {
   width: 70%;
   height: 100%;
 }
-.hotelInfoInformation .name {
+.hotelInfoInformation .searchcontainerALL .name {
   font-size: 1rem;
   position: relative;
 }
@@ -910,25 +922,21 @@
 }
 @media (min-width: 480px) {
   .hotelinfoSectionContainer {
-    background-color: burlywood;
     width: 100%;
   }
 }
 @media (min-width: 720px) {
   .hotelinfoSectionContainer {
-    background-color: beige;
     width: 85%;
   }
 }
 @media (min-width: 960px) {
   .hotelinfoSectionContainer {
-    background-color: aquamarine;
     width: 80%;
   }
 }
 @media (min-width: 1200px) {
   .hotelinfoSectionContainer {
-    background-color: aqua;
     width: 70%;
   }
 }
