--- a/styles/components/_hotelinfo-section.scss
+++ b/styles/components/_hotelinfo-section.scss
@@ -25,7 +25,7 @@
     .roominfo, .hotelInfoEvaluate, .hotelInfoInformation, 
     .hotelInfoAttraction, .hotelInfoTransportation
     {
-        margin-top: 3%;
+        margin-top: 5%;
         margin-bottom: 5%;
     }
 }
@@ -55,4 +55,9 @@
         }
     }
     
+    .title {
+        font-size: $font-size-xl;
+        font-weight: bold;
+        margin: $base-margin;
+    }
 }
