--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -946,7 +946,7 @@
 }
 .hotelinfoSectionContainer .roominfo, .hotelinfoSectionContainer .hotelInfoEvaluate, .hotelinfoSectionContainer .hotelInfoInformation,
 .hotelinfoSectionContainer .hotelInfoAttraction, .hotelinfoSectionContainer .hotelInfoTransportation {
-  margin-top: 3%;
+  margin-top: 5%;
   margin-bottom: 5%;
 }
 
@@ -974,6 +974,11 @@
     grid-column-start: 1;
     grid-column-end: 2;
   }
+}
+.roominfo .title {
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 1rem;
 }
 
 .containerhidden {
