--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -33,5 +33,8 @@
 @import '../components/search-section';
 @import '../components/userMulti-menu';
 @import '../components/userPersonalInfo-section';
+
+@import '../components/userSellIndex-setting';
+@import '../components/userSellOrder-setting';
 // utilities (margin, padding, opacity, etc)
 // @import 'utilities';
