--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -8,6 +8,8 @@
 
 
 // components (button, card, navbar etc)
+@import '../components/multi-header';
+
 @import '../components/home-intro';
 @import '../components/home-login-bt';
 @import '../components/home-searchform';
