--- a/styles/components/_search-section.scss
+++ b/styles/components/_search-section.scss
@@ -1,30 +1,3 @@
-.searchTopContainer{
-    background-color: dimgrey;
-    display:flex;
-    justify-content: space-between;
-    position: fixed;
-    width: 100%;
-    align-items: center;
-    height: 15%;
-    padding-right: 3%;
-    padding-left: 3%;
-    padding-top: $base-padding;
-    
-
-    .text{
-        position: relative;
-        color: white;
-        font-weight: bold;
-
-        @include sm {
-            font-size: $font-size-xxl;
-        }
-        @include lg {
-            font-size: $base-font-size * 3.5;
-        }
-    }
-}
-
 .searchBottomContainer{
     display: flex;
     height: 100%;
@@ -77,13 +50,17 @@
     }
     .hoteldata {
         position: absolute;
-        height:100%;
+        // height:100%;
         width:80%;
         top: 20%;
         z-index: -1;
         right: 0%;
+        display: flex;
+        flex-direction: column;
         
     }
+    
+
 }
 
 .searchMask{
