file place adjust

--- a/styles/components/_search-result.scss
+++ b/styles/components/_search-result.scss
@@ -6,7 +6,7 @@
 
     //position
     margin: auto;
-    margin-top: $edge-margin;
+    margin-top: $base-margin;
     margin-bottom: $base-margin;
 
     //style
