--- a/styles/leecopy.module.css
+++ b/styles/leecopy.module.css
@@ -1,11 +1,11 @@
 .infoTitleContainer {
     display: flex;
-    height: 150%;
+    height: 100%;
     justify-content: space-between;
   }
   .infoTitleContainer .titleLeftContainer {
     width: 25%;
-    height: 75%;
+    height: 100%;
     position: relative;
     background-color: dimgrey;
     top: 0%;
@@ -45,7 +45,7 @@
   }
   .infoTitleContainer .titleRightContainer .titleRightTopContainer{
     width: 100%;
-    height: 20%;
+    height: 40%;
     position: relative;
     display: flex;
     flex-direction: row;
@@ -68,14 +68,14 @@
     background-color: white;
     border-radius: 10px;
     top: -10%;
-    right: -155%;
+    right: -167%;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
   .infoTitleContainer .titleRightContainer .titleRightBottomContainer{
     width: 100%;
-    height: 55%;
+    height: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -83,8 +83,8 @@
   }
 
   .infoTitleContainer .titleRightContainer .titleRightBottomContainer .pictureBoard{
-    width: 1150px;
-    height: 800px;
+    width: 90%;
+    height: 100%;
     position: relative;
     background-color: #CDCDCD;
     top: 0%;
@@ -96,6 +96,8 @@
   .infoTitleContainer .titleRightContainer .titleRightBottomContainer .pictureBoard .leftBoard{
     width: 20%;
     height: 100%;
+    padding: 2%;
+    padding-right: 0%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -103,16 +105,41 @@
     
   }
   .infoTitleContainer .titleRightContainer .titleRightBottomContainer .pictureBoard .leftBoard .pictureType1{
-    width: 80%;
+    width: 90%;
     height: 28%;
     background-color: white;
   }
   .infoTitleContainer .titleRightContainer .titleRightBottomContainer .pictureBoard .rightBoard{
     width: 80%;
     height: 100%;
+    padding: 2%;
     display: flex;
     flex-direction: column;
     align-items: center;    
   }
-
-
+  .infoTitleContainer .titleRightContainer .titleRightBottomContainer .pictureBoard .rightBoard .rightTopBoard{
+    width: 96%;
+    height: 62%;
+    margin: 2%;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;    
+  }
+  .infoTitleContainer .titleRightContainer .titleRightBottomContainer .pictureBoard .rightBoard .rightBottomBoard{
+    width: 96%;
+    height: 29%;
+    margin: 2%;
+    display: flex;
+    flex-direction: row;
+    align-items: center; 
+    justify-content: space-between;   
+  }
+  .infoTitleContainer .titleRightContainer .titleRightBottomContainer .pictureBoard .rightBoard .rightBottomBoard .pictureType2{
+    width: 48%;
+    height: 100%;
+    background-color: white;   
+  }
+  .title{
+    font-size: 3rem;
+  }
