--- a/styles/components/_userSellOrder-setting.scss
+++ b/styles/components/_userSellOrder-setting.scss
@@ -95,6 +95,7 @@
                 font-weight: bold;
                 background-color: white;
                 border-radius: 10px;
+                padding-left: 10px; //加padding
             }
 
             .option{
@@ -121,6 +122,7 @@
                 font-size: 2rem;
                 font-weight: bold;
                 width: 20%;
+                margin-left: 10%;
             }
             
             .infoblock{
@@ -132,15 +134,17 @@
                 font-size: 1.25rem;
                 margin-top: 2%;
                 width: 30%;
+                margin-left: 10%;
             }
             .info2{
                 font-size: 1.25rem;
                 margin-top: 2%;
-                margin-left: 10%;;
+                margin-left: 17.5%;;
             }
             .info3{
                 font-size: 1.25rem;
                 margin-top: 2%;
+                margin-left: 10%;
             }
             .button{
                 font-size: 1.25rem;
