--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -35,6 +35,7 @@
 @import '../components/userPersonalInfo-section';
 
 @import '../components/userSellIndex-setting';
+@import '../components/userSellIndex-table';
 @import '../components/userSellOrder-setting';
 // utilities (margin, padding, opacity, etc)
 // @import 'utilities';
