--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -1707,11 +1707,12 @@
   font-weight: bold;
 }
 .userSellIndex_SettingContainer .container .salesfiguresblock {
+  display: flex;
   position: relative;
   top: 10%;
   left: 10%;
   background-color: white;
-  padding: 3rem;
+  padding: 2.25rem;
   width: 100%;
   height: 67.5%;
   border-radius: 20px;
@@ -1720,22 +1721,79 @@
 .userSellIndex_SettingContainer .container .salesfiguresblock .title {
   font-size: 2rem;
   font-weight: bold;
-  width: 20%;
+  width: 50%;
+}
+.userSellIndex_SettingContainer .container .salesfiguresblock .textcontainer {
+  height: 100%;
+  width: 58%;
+  display: flex;
+  flex-direction: column;
 }
 .userSellIndex_SettingContainer .container .salesfiguresblock .moneycontainer {
   display: flex;
   position: relative;
-  top: 70%;
+  top: 75%;
+  width: 100%;
 }
 .userSellIndex_SettingContainer .container .salesfiguresblock .moneycontainer .sale {
   margin-top: 1%;
-  font-size: 1rem;
+  font-size: 1.25rem;
 }
 .userSellIndex_SettingContainer .container .salesfiguresblock .moneycontainer .money {
   font-size: 3rem;
   font-weight: bold;
   color: red;
   margin-left: 2%;
+}
+
+.userSellIndex_TableContainer {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  border: solid;
+}
+.userSellIndex_TableContainer .columnContainer {
+  height: 100%;
+  width: 16.6666666667%;
+  display: flex;
+  flex-direction: column;
+}
+.userSellIndex_TableContainer .columnContainer .tabletop {
+  background-color: #d3d3d3;
+  height: 12.5%;
+  width: 100%;
+  font-size: 1.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-right: solid;
+}
+.userSellIndex_TableContainer .columnContainer .tablemiddle {
+  background-color: white;
+  height: 62.5%;
+  width: 100%;
+  font-size: 1.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-right: solid;
+}
+.userSellIndex_TableContainer .columnContainer .tablebottom1 {
+  height: 12.5%;
+  width: 100%;
+  font-size: 1.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top: solid;
+}
+.userSellIndex_TableContainer .columnContainer .tablebottom2 {
+  height: 12.5%;
+  width: 100%;
+  font-size: 1.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .userSellOrder_SettingContainer {
@@ -1828,6 +1886,7 @@
   font-weight: bold;
   background-color: white;
   border-radius: 10px;
+  padding-left: 10px;
 }
 .userSellOrder_SettingContainer .container .filterblock .option {
   font-weight: bold;
@@ -1850,6 +1909,7 @@
   font-size: 2rem;
   font-weight: bold;
   width: 20%;
+  margin-left: 10%;
 }
 .userSellOrder_SettingContainer .container .salesfiguresblock .infoblock {
   display: flex;
@@ -1859,15 +1919,17 @@
   font-size: 1.25rem;
   margin-top: 2%;
   width: 30%;
+  margin-left: 10%;
 }
 .userSellOrder_SettingContainer .container .salesfiguresblock .info2 {
   font-size: 1.25rem;
   margin-top: 2%;
-  margin-left: 10%;
+  margin-left: 17.5%;
 }
 .userSellOrder_SettingContainer .container .salesfiguresblock .info3 {
   font-size: 1.25rem;
   margin-top: 2%;
+  margin-left: 10%;
 }
 .userSellOrder_SettingContainer .container .salesfiguresblock .button {
   font-size: 1.25rem;
