--- a/styles/components/_userSellIndex-table.scss
+++ b/styles/components/_userSellIndex-table.scss
@@ -1,20 +1,41 @@
 .userSellIndex_TableContainer{
+    display: flex;
     height: 100%;
     width: 100%;
-    display: flex;
-    border: solid;
 
+    @include sm {
+        border: hidden;
+     }
+    @include md {
+        border: solid
+    }
+    
     .columnContainer{
         height: 100%;
         width: calc(100% / 6);
         display: flex;
         flex-direction: column;
         
+        @include sm {
+            visibility: hidden;
+        }
+        @include md {
+            font-size: 0.7rem;
+            visibility: visible;
+        }
+        @include lg {
+            font-size: 0.9rem;
+            visibility: visible;
+        }
+        @include xl {
+            font-size: 1.1rem;
+            visibility: visible;
+        }
+        
         .tabletop{
             background-color: #d3d3d3;
             height: 12.5%;
             width: 100%;
-            font-size: 1.25rem;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -22,10 +43,8 @@
         }
     
         .tablemiddle{
-            background-color: white;
             height: 62.5%;
             width: 100%;
-            font-size: 1.25rem;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -35,7 +54,6 @@
         .tablebottom1{
             height:12.5%;
             width: 100%;
-            font-size: 1.25rem;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -45,7 +63,6 @@
         .tablebottom2{
             height:12.5%;
             width: 100%;
-            font-size: 1.25rem;
             display: flex;
             justify-content: center;
             align-items: center;
