--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -1623,10 +1623,29 @@
 .userSellIndex_SettingContainer {
   position: absolute;
   top: 15%;
-  right: 0%;
   width: 100%;
   height: 85%;
   display: flex;
+}
+@media (min-width: 480px) {
+  .userSellIndex_SettingContainer {
+    background-color: red;
+  }
+}
+@media (min-width: 720px) {
+  .userSellIndex_SettingContainer {
+    background-color: green;
+  }
+}
+@media (min-width: 960px) {
+  .userSellIndex_SettingContainer {
+    background-color: yellow;
+  }
+}
+@media (min-width: 1200px) {
+  .userSellIndex_SettingContainer {
+    background-color: #d3d3d3;
+  }
 }
 .userSellIndex_SettingContainer .container {
   width: 70%;
@@ -1636,8 +1655,6 @@
   align-items: center;
 }
 .userSellIndex_SettingContainer .container .switch {
-  width: 20%;
-  height: 7.5%;
   display: flex;
   position: relative;
   left: 10%;
@@ -1646,23 +1663,25 @@
   border-radius: 50px;
   justify-content: center;
   align-items: center;
+  width: 23%;
+  height: 8%;
 }
-.userSellIndex_SettingContainer .container .innerbutton {
+.userSellIndex_SettingContainer .container .switch .innerbutton {
   font-weight: bold;
-  font-size: 1rem;
   color: white;
-  height: 50%;
-  width: 40%;
   border-radius: 15px;
   background-color: transparent;
+  font-size: 1rem;
+  height: 50%;
+  width: 50%;
 }
-.userSellIndex_SettingContainer .container .buttontext {
+.userSellIndex_SettingContainer .container .switch .buttontext {
   background-color: white;
   font-weight: bold;
+  border-radius: 50px;
   font-size: 1rem;
   padding: 3%;
-  border-radius: 50px;
-  margin-left: 3.5%;
+  margin-left: 7.5%;
 }
 .userSellIndex_SettingContainer .container .logo {
   position: relative;
@@ -1673,26 +1692,86 @@
   height: 10%;
   display: flex;
   position: relative;
-  left: 10%;
   top: 7.5%;
-  font-size: 1rem;
   justify-content: center;
   align-items: center;
 }
+@media (min-width: 720px) {
+  .userSellIndex_SettingContainer .container .filterblock {
+    left: 3%;
+    font-size: 0.6rem;
+  }
+}
+@media (min-width: 960px) {
+  .userSellIndex_SettingContainer .container .filterblock {
+    left: 6.5%;
+    font-size: 0.8rem;
+  }
+}
+@media (min-width: 1200px) {
+  .userSellIndex_SettingContainer .container .filterblock {
+    left: 10%;
+    font-size: 1rem;
+  }
+}
 .userSellIndex_SettingContainer .container .filterblock .filterp {
   height: 50%;
-  width: 5%;
   font-size: 1.25rem;
   font-weight: bold;
   margin-top: 0.5%;
 }
+@media (min-width: 480px) {
+  .userSellIndex_SettingContainer .container .filterblock .filterp {
+    visibility: hidden;
+  }
+}
+@media (min-width: 720px) {
+  .userSellIndex_SettingContainer .container .filterblock .filterp {
+    width: 10%;
+    visibility: visible;
+  }
+}
+@media (min-width: 960px) {
+  .userSellIndex_SettingContainer .container .filterblock .filterp {
+    width: 7.5%;
+    visibility: visible;
+  }
+}
+@media (min-width: 1200px) {
+  .userSellIndex_SettingContainer .container .filterblock .filterp {
+    width: 5%;
+    visibility: visible;
+  }
+}
 .userSellIndex_SettingContainer .container .filterblock .filterp2 {
   height: 50%;
-  width: 5%;
   font-size: 1.25rem;
   font-weight: bold;
   margin-top: 0.5%;
-  margin-left: 3%;
+  margin-left: 5%;
+}
+@media (min-width: 480px) {
+  .userSellIndex_SettingContainer .container .filterblock .filterp2 {
+    visibility: hidden;
+  }
+}
+@media (min-width: 720px) {
+  .userSellIndex_SettingContainer .container .filterblock .filterp2 {
+    width: 10%;
+    visibility: visible;
+  }
+}
+@media (min-width: 960px) {
+  .userSellIndex_SettingContainer .container .filterblock .filterp2 {
+    width: 7.5%;
+    visibility: visible;
+  }
+}
+@media (min-width: 1200px) {
+  .userSellIndex_SettingContainer .container .filterblock .filterp2 {
+    width: 5%;
+    visibility: visible;
+  }
 }
 .userSellIndex_SettingContainer .container .filterblock .selectform {
   height: 50%;
@@ -1703,25 +1782,57 @@
   border-radius: 10px;
 }
 .userSellIndex_SettingContainer .container .filterblock .option {
-  font-size: 1.25rem;
   font-weight: bold;
+  font-size: 1.25rem;
 }
 .userSellIndex_SettingContainer .container .salesfiguresblock {
   display: flex;
   position: relative;
   top: 10%;
-  left: 10%;
-  background-color: white;
-  padding: 2.25rem;
   width: 100%;
   height: 67.5%;
+  background-color: white;
+  padding: 2.25rem;
   border-radius: 20px;
   border: 1px solid aliceblue;
 }
+@media (min-width: 480px) {
+  .userSellIndex_SettingContainer .container .salesfiguresblock {
+    left: 6%;
+  }
+}
+@media (min-width: 720px) {
+  .userSellIndex_SettingContainer .container .salesfiguresblock {
+    left: 3%;
+  }
+}
+@media (min-width: 960px) {
+  .userSellIndex_SettingContainer .container .salesfiguresblock {
+    left: 6.5%;
+  }
+}
+@media (min-width: 1200px) {
+  .userSellIndex_SettingContainer .container .salesfiguresblock {
+    left: 10%;
+  }
+}
 .userSellIndex_SettingContainer .container .salesfiguresblock .title {
-  font-size: 2rem;
   font-weight: bold;
-  width: 50%;
+}
+@media (min-width: 480px) {
+  .userSellIndex_SettingContainer .container .salesfiguresblock .title {
+    font-size: 1.65rem;
+  }
+}
+@media (min-width: 720px) {
+  .userSellIndex_SettingContainer .container .salesfiguresblock .title {
+    font-size: 1.75rem;
+  }
+}
+@media (min-width: 960px) {
+  .userSellIndex_SettingContainer .container .salesfiguresblock .title {
+    font-size: 2rem;
+  }
 }
 .userSellIndex_SettingContainer .container .salesfiguresblock .textcontainer {
   height: 100%;
@@ -1731,26 +1842,70 @@
 }
 .userSellIndex_SettingContainer .container .salesfiguresblock .moneycontainer {
   display: flex;
+  flex-direction: column;
   position: relative;
-  top: 75%;
-  width: 100%;
 }
-.userSellIndex_SettingContainer .container .salesfiguresblock .moneycontainer .sale {
-  margin-top: 1%;
-  font-size: 1.25rem;
+@media (min-width: 480px) {
+  .userSellIndex_SettingContainer .container .salesfiguresblock .moneycontainer {
+    top: 80%;
+  }
+}
+@media (min-width: 720px) {
+  .userSellIndex_SettingContainer .container .salesfiguresblock .moneycontainer {
+    top: 72.5%;
+  }
+}
+@media (min-width: 960px) {
+  .userSellIndex_SettingContainer .container .salesfiguresblock .moneycontainer {
+    top: 67.5%;
+  }
+}
+@media (min-width: 720px) {
+  .userSellIndex_SettingContainer .container .salesfiguresblock .moneycontainer .sale {
+    font-size: 1rem;
+    margin-top: 1%;
+  }
+}
+@media (min-width: 960px) {
+  .userSellIndex_SettingContainer .container .salesfiguresblock .moneycontainer .sale {
+    font-size: 1.25rem;
+    margin-top: 1%;
+  }
 }
 .userSellIndex_SettingContainer .container .salesfiguresblock .moneycontainer .money {
-  font-size: 3rem;
   font-weight: bold;
   color: red;
-  margin-left: 2%;
+}
+@media (min-width: 480px) {
+  .userSellIndex_SettingContainer .container .salesfiguresblock .moneycontainer .money {
+    font-size: 1.15rem;
+  }
+}
+@media (min-width: 720px) {
+  .userSellIndex_SettingContainer .container .salesfiguresblock .moneycontainer .money {
+    font-size: 1.5rem;
+  }
+}
+@media (min-width: 960px) {
+  .userSellIndex_SettingContainer .container .salesfiguresblock .moneycontainer .money {
+    font-size: 2rem;
+  }
 }
 
 .userSellIndex_TableContainer {
+  display: flex;
   height: 100%;
   width: 100%;
-  display: flex;
-  border: solid;
+}
+@media (min-width: 480px) {
+  .userSellIndex_TableContainer {
+    border: hidden;
+  }
+}
+@media (min-width: 720px) {
+  .userSellIndex_TableContainer {
+    border: solid;
+  }
 }
 .userSellIndex_TableContainer .columnContainer {
   height: 100%;
@@ -1758,21 +1913,41 @@
   display: flex;
   flex-direction: column;
 }
+@media (min-width: 480px) {
+  .userSellIndex_TableContainer .columnContainer {
+    visibility: hidden;
+  }
+}
+@media (min-width: 720px) {
+  .userSellIndex_TableContainer .columnContainer {
+    font-size: 0.7rem;
+    visibility: visible;
+  }
+}
+@media (min-width: 960px) {
+  .userSellIndex_TableContainer .columnContainer {
+    font-size: 0.9rem;
+    visibility: visible;
+  }
+}
+@media (min-width: 1200px) {
+  .userSellIndex_TableContainer .columnContainer {
+    font-size: 1.1rem;
+    visibility: visible;
+  }
+}
 .userSellIndex_TableContainer .columnContainer .tabletop {
   background-color: #d3d3d3;
   height: 12.5%;
   width: 100%;
-  font-size: 1.25rem;
   display: flex;
   justify-content: center;
   align-items: center;
   border-right: solid;
 }
 .userSellIndex_TableContainer .columnContainer .tablemiddle {
-  background-color: white;
   height: 62.5%;
   width: 100%;
-  font-size: 1.25rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1781,7 +1956,6 @@
 .userSellIndex_TableContainer .columnContainer .tablebottom1 {
   height: 12.5%;
   width: 100%;
-  font-size: 1.25rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1790,7 +1964,6 @@
 .userSellIndex_TableContainer .columnContainer .tablebottom2 {
   height: 12.5%;
   width: 100%;
-  font-size: 1.25rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1799,7 +1972,6 @@
 .userSellOrder_SettingContainer {
   position: absolute;
   top: 15%;
-  right: 0%;
   width: 100%;
   height: 85%;
   display: flex;
@@ -1812,8 +1984,8 @@
   align-items: center;
 }
 .userSellOrder_SettingContainer .container .switch {
-  width: 20%;
-  height: 7.5%;
+  width: 23%;
+  height: 8%;
   display: flex;
   position: relative;
   left: 10%;
@@ -1858,14 +2030,14 @@
 }
 .userSellOrder_SettingContainer .container .filterblock .filterp {
   height: 50%;
-  width: 5%;
+  width: 5.5%;
   font-size: 1.25rem;
   font-weight: bold;
   margin-top: 0.5%;
 }
 .userSellOrder_SettingContainer .container .filterblock .filterp2 {
   height: 50%;
-  width: 5%;
+  width: 5.5%;
   font-size: 1.25rem;
   font-weight: bold;
   margin-top: 0.5%;
@@ -1873,7 +2045,7 @@
 }
 .userSellOrder_SettingContainer .container .filterblock .filterp3 {
   height: 50%;
-  width: 7.5%;
+  width: 9%;
   font-size: 1.25rem;
   font-weight: bold;
   margin-top: 0.5%;
