--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -670,6 +670,9 @@
   display: grid;
   width: 100%;
   height: 50%;
+  background-color: white;
+  margin-top: 2%;
+  border-radius: 10px;
 }
 @media (min-width: 480px) {
   .hotelInfoAttraction .attraction {
@@ -1037,8 +1040,47 @@
   margin-bottom: 5%;
 }
 
+.hotelinfoSectionContainer .block_1 {
+
+  margin-left: 1rem;
+}
+
+.hotelinfoSectionContainer .block_1 .title{
+  font-size: 3rem;
+  font-weight: bold; 
+  margin-top: 5%;
+}
+
+.hotelinfoSectionContainer .block_1 .s_title{
+  font-size: 1.75rem;
+  font-weight: bold; 
+  margin-top: 2%;
+}
+
+.hotelinfoSectionContainer .block_1 .content{
+  font-size: 1.5rem;
+  margin-top:1rem;
+}
+
+.hotelinfoSectionContainer .block_1 .block{
+  display:flex;
+  
+}
+
+.hotelinfoSectionContainer .block p{
+  font-size:1rem;
+  background-color: white;
+  border-radius: 10px;
+  padding-left:15px;
+  padding-right:15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin: 1rem;
+}
+
 .roominfo {
   display: grid;
+  grid-column: auto;
 }
 @media (min-width: 480px) {
   .roominfo {
